--- a/style.css
+++ b/style.css
@@ -6,26 +6,25 @@
 
 html{
     font-size: 62.5%;
+    background: url('./cards/wood-grain-3.jpg') no-repeat center center/cover;
     /* 10px and default 1rem=16px */
 }
 
 .title{
     text-align: center;
-    background: rgb(8, 77, 34);
-    background: linear-gradient(0deg, rgba(8, 77, 34) 0%, rgb(201, 231, 213) 15%);
-    color: rgb(0, 0, 0);
-    font-family: 'Teko', sans-serif;
-    padding: .5rem;
+    color: gold;
+    font-family: 'Lobster', cursive;
+    padding: 1rem;
     font-size: 8rem;
     word-spacing: 2rem;
     letter-spacing: .3rem;
+    background: url('./cards/wood-grain-3.jpg') no-repeat center center/cover;
 }
 
 #command {
     font-weight: 800;
     font-size: 3.5rem;
     word-spacing: 1rem;
-    
 }
 @keyframes blinker {
     25% {
@@ -36,6 +35,8 @@ html{
 .main{
     margin: auto;
     text-align: center;
+    background: url('./cards/wood-grain-3.jpg') no-repeat center center/cover;
+    
 }
 
 .row1{
@@ -45,7 +46,7 @@ html{
     justify-content: space-around;
     padding: 1rem;
     border-bottom: black solid .1rem;
-    height: 50rem;
+    height: 40rem;
 }
 
 .row1 ,.row2{
@@ -58,6 +59,7 @@ html{
     padding: 1rem;
     text-align: center;
     flex: 1;
+    
 }
 
 .row1 h2{
@@ -73,6 +75,7 @@ html{
     height: 20rem;
     width: 13rem;
     padding: 1rem;
+
 }
 
 .row2{
@@ -102,24 +105,26 @@ html{
 
 .buttons button:hover{
     cursor: pointer;
-    box-shadow: black 0px 0px 5px 2px;
+    box-shadow: white 0px 0px 5px 2px;
 }
 
 .row3 h3{
-    font-family: 'Teko', sans-serif;
+    font-family: 'Lobster', cursive;
     font-size: 4rem;
+    color: gold;
+    background: url('./cards/wood-grain-3.jpg') no-repeat center center/cover;
 }
 
 .row3{
     margin: auto;
-    
+    background: url('./cards/wood-grain-3.jpg') no-repeat center center/cover;
 }
 
 table, th, td{
     padding: .5rem;
-    border: solid 2px black;
-    font-size: 3rem;
-    font-family: 'Teko', sans-serif;
+    color: gold;
+    font-size: 4rem;
+    font-family: 'Lobster', cursive;
     font-weight: 400;
     padding-left: 3rem;
     padding-right: 3rem;
