--- a/public/css/style.css
+++ b/public/css/style.css
@@ -146,3 +146,35 @@ table{
         font-size: 30%;
     }
 }
+
+.row{
+    background: url('/cards/wood-grain-3.jpg') no-repeat center center/cover;
+}
+
+.login-form{
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
+    
+}
+
+.signup-form{
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
+  
+}
+
+
+
+#email{
+    font-display: white;
+}
+
+#password{
+    color: white;
+}
