--- a/public/css/login.css
+++ b/public/css/login.css
@@ -9,10 +9,10 @@ html {
     display: grid;
     justify-items: center;
     align-items: center;
-    background-color: #3a3a3a;
+    background-color: green;
   }
 
- #title {
+ #title1 {
     font-family: 'Lobster', cursive;
     font-size: xx-large;
     color: black;
@@ -29,30 +29,6 @@ html {
     box-shadow: 0px 0px 5px 2px black;
   }
   
-  #login-error-msg-holder {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-  }
-  
-  #login-error-msg {
-    width: 23%;
-    text-align: center;
-    margin: 0;
-    padding: 5px;
-    font-size: 12px;
-    font-weight: bold;
-    color: #8a0000;
-    border: 1px solid #8a0000;
-    background-color: #e58f8f;
-    opacity: 0;
-  }
-  
-  #error-msg-second-line {
-    display: block;
-  }
   
   #login-form {
     align-self: flex-start;
@@ -75,6 +51,38 @@ html {
   }
   
   #login-form-submit {
+    width: 100%;
+    padding: 7px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    background-color: #3a3a3a;
+    cursor: pointer;
+    outline: none;
+  }
+
+  #signup-form {
+    align-self: flex-start;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+  }
+  
+  .signup-form-field::placeholder {
+    color: #3a3a3a;
+  }
+  
+  .signup-form-field {
+    border: none;
+    border-bottom: 1px solid #3a3a3a;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    outline: none;
+    padding: 0px 0px 5px 5px;
+  }
+  
+  #signup-form-submit {
     width: 100%;
     padding: 7px;
     border: none;
