--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,24 +9,27 @@
 </head>
 
 <body>
- 
-  <main id="main-holder">
-    <h1 id="title">21 BlackJack</h1>
+<main id="main-holder">
+  
     <h1 id="login-header">Login</h1>
     
-    <div id="login-error-msg-holder">
-      <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
-    </div>
-    
     <form id="login-form">
-      <input type="text" name="email-login" id="username-field" class="login-form-field" placeholder="Email">
-      <input type="password" name="password-login" id="password-field" class="login-form-field" placeholder="Password">
+      <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
+      <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
       <input type="submit" value="Login" id="login-form-submit">
     </form>
+
+    <h1 id="signup-header">Sign Up</h1>
+    <form id="signup-form">
+      <input type="text" name="username" id="username-field" class="signup-form-field" placeholder="Username">
+      <input type="password" name="password" id="password-field" class="signup-form-field" placeholder="Password">
+      <input type="submit" value="Sign Up" id="signup-form-submit">
   
-  </main>
+ 
+</div>
+</main>
 </body>
 
-</html>
+
     
 <script src="./js/login.js"></script>
