--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,14 +14,15 @@
     <h1 id="login-header">Login</h1>
     
     <form id="login-form">
-      <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
-      <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
+      <input type="text" name="username" id="email-login" class="login-form-field" placeholder="Username">
+      <input type="password" name="password" id="password-login" class="login-form-field" placeholder="Password">
       <input type="submit" value="Login" id="login-form-submit">
     </form>
 
     <h1 id="signup-header">Sign Up</h1>
     <form id="signup-form">
       <input type="text" name="username" id="username-field" class="signup-form-field" placeholder="Username">
+      <input type="text" name="email" id="email-field" class="signup-form-field" placeholder="Email">
       <input type="password" name="password" id="password-field" class="signup-form-field" placeholder="Password">
       <input type="submit" value="Sign Up" id="signup-form-submit">
   
