--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -32,6 +32,16 @@
                 </tr>
             </table>
         </div>
+         {{#if logged_in}}
+        <nav>
+        <button class="btn" id="logout">logout</button>
+        </nav>
+        {{/if}}
     </div>
 
+
+
+    {{#if logged_in}}
+    <script src="/js/logout.js"></script>
+    {{/if}}
     <script src="/js/script.js"></script>
