--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,12 @@ html{
     /* 10px and default 1rem=16px */
 }
 
+nav{
+    display: flex;
+    flex: inline-block;
+    justify-content: space-between;
+}
+
 .title{
     text-align: center;
     color: gold;
@@ -153,3 +159,28 @@ table{
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
+#leaderboardButton{
+    display: flex;
+    flex-wrap: column;
+    font-size: 2.2rem;
+    font-weight: 700;
+    font-family: 'Lobster', cursive;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: .2rem;
+    padding-bottom: .2rem;
+    margin: 1.5rem;
+}
+
+#logout{
+    display: flex;
+    flex-wrap: column;
+    font-size: 2.2rem;
+    font-weight: 700;
+    font-family: 'Lobster', cursive;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: .2rem;
+    padding-bottom: .2rem;
+    margin: 1.5rem;
+}
