--- a/public/css/login.css
+++ b/public/css/login.css
@@ -12,15 +12,16 @@ html {
     background-color: green;
   }
 
- #title1 {
-    font-family: 'Lobster', cursive;
-    font-size: xx-large;
-    color: black;
+ .title {
+    background: none;
+    height:100px;
+    
+  
  }
   
   #main-holder {
     width: 50%;
-    height: 50%;
+    height: 75%;
     display: grid;
     justify-items: center;
     align-items: center;
