add signup function

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -22,9 +22,9 @@
 
     <h1 id="signup-header">Sign Up</h1>
     <form id="signup-form">
-      <input type="text" name="username" id="username-field" class="signup-form-field" placeholder="Username">
-      <input type="text" name="email" id="email-field" class="signup-form-field" placeholder="Email">
-      <input type="password" name="password" id="password-field" class="signup-form-field" placeholder="Password">
+      <input type="text" name="username" id="username-signup" class="signup-form-field" placeholder="Username">
+      <input type="text" name="email" id="email-signup" class="signup-form-field" placeholder="Email">
+      <input type="password" name="password" id="password-signup" class="signup-form-field" placeholder="Password">
       <input type="submit" value="Sign Up" id="signup-form-submit">
   
  
