bug fix black jack and added login styling

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<a class="title">21 BlackJack</a>
+<h1 class="title">21 BlackJack</h1>
 <main id="main-holder">
   
     <h1 id="login-header">Login</h1>
