--- a/public/css/login.css
+++ b/public/css/login.css
@@ -9,7 +9,7 @@ html {
     display: grid;
     justify-items: center;
     align-items: center;
-    background-color: green;
+    background: url('/cards/wood-grain-3.jpg') no-repeat center center/cover;
   }
 
  .title {
@@ -21,13 +21,14 @@ html {
   
   #main-holder {
     width: 50%;
-    height: 75%;
+    height: 85%;
     display: grid;
     justify-items: center;
     align-items: center;
-    background-color: white;
+    background:  url('/cards/table.jpg') no-repeat center center/cover;
     border-radius: 7px;
     box-shadow: 0px 0px 5px 2px black;
+    margin-bottom: 5%;
   }
   
   
